Correct spacing on GM info window

--- a/modules_v3/googlemap/css/wt_v3_googlemap.css
+++ b/modules_v3/googlemap/css/wt_v3_googlemap.css
@@ -92,7 +92,7 @@ ul.tabs a.current {background-color:#fff; border-bottom:1px solid #ddd; color:#0
 #iwcontent_edit {background-color:#eeeeee; border:1px solid #bbbbbb; height:60px; margin-right:0em;}
 #iwcontent_edit a {color:black;}
 #iwcontent_edit a:hover {color:red;}
-.optionbox #gname{white-space:normal;}
+.optionbox #gname{white-space:normal; line-height: initial;}
 
 .iwstyle {width: 360px;}
 
